# ChangeLog for app-text/texlive
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/texlive/ChangeLog,v 1.76 2011/07/12 19:24:14 aballier Exp $

  12 Jul 2011; Alexis Ballier <aballier@gentoo.org> texlive-2010-r2.ebuild:
  bump luatex dep to make sure people use the latest version as it fixes
  problems on some arches wrt largefile stuff

  08 Jul 2011; Alexis Ballier <aballier@gentoo.org> texlive-2010.ebuild,
  texlive-2010-r1.ebuild, texlive-2010-r2.ebuild:
  remove dialog dep, if its needed packages should depend on it

  14 Jun 2011; Matt Turner <mattst88@gentoo.org> texlive-2010-r1.ebuild,
  texlive-2010-r2.ebuild:
  Added ~mips, bug 352300

  18 Mar 2011; Thomas Kahle <tomka@gentoo.org> texlive-2010-r2.ebuild:
  ~x86 per bug 355353

  27 Feb 2011; Raúl Porcel <armin76@gentoo.org> texlive-2010-r1.ebuild,
  texlive-2010-r2.ebuild:
  Add ~alpha/~ia64/~s390/~sh/~sparc wrt #342513

  24 Feb 2011; Jeroen Roovers <jer@gentoo.org> texlive-2010-r2.ebuild:
  Marked ~hppa (bug #355353).

  20 Feb 2011; Markus Meier <maekke@gentoo.org> texlive-2010-r2.ebuild:
  add ~arm, bug #355353

  20 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
  texlive-2010-r1.ebuild, texlive-2010-r2.ebuild:
  Marked ~ppc/~ppc64 wrt #352300, #355353
