@@ -6,12 +6,13 @@ EBUILD texlive-2009.ebuild 7649 RMD160 ffd3ecd0088c3cb8c170ea22f98bc7e65cb38790 
 EBUILD texlive-2010-r1.ebuild 9325 RMD160 0a3879f2a87325b39ca0fbf6b22b89975d39b553 SHA1 84d215ae7978af0b8c85933fa84af79fe8808304 SHA256 18d36662f3ecda888547e959c6852282c6bd83d635d8fe2c0c7210731cb4d911
 EBUILD texlive-2010-r2.ebuild 9285 RMD160 15ab7ae91595295f566adc429f3b42aa697d0ec4 SHA1 4f009d1d6451076028106050f6e7bd648e60f4f7 SHA256 dd07619e5780da2701b920f0b0e3e839c5eaf4635cc252787549cec6f9fbaca8
 EBUILD texlive-2010.ebuild 9310 RMD160 55b4fb61607d302c5f06aa9b4d9b7dee9f70fe15 SHA1 fb8979528c263e67d99a42aa2364c5582449f4b9 SHA256 e83c000874626bbe6db64c39acb5485293b99749831ad07e2a0df7ac4dfa9126
-MISC ChangeLog 1306 RMD160 c501756bdd92efde31fafa7da8627bf616b9affd SHA1 762b28c61ffd431d57eba8abdc18bb51e0159379 SHA256 48ee913dd364e72d7c166200023a38222cdda2bfdb053fc6013f106832a07cd1
+EBUILD texlive-2011.ebuild 9218 RMD160 9fc3e5a93dcb5cc7ad00976837abc131527eaeee SHA1 0ea9ca3ebc417db90bb80e6da426ffbd725c18bf SHA256 2a9b1341eedb379cbefa5b55f71abdc430a6362056b14040f8a906c81817200c
+MISC ChangeLog 1434 RMD160 1da7a6d2a85f0039551580a2bd73877975381579 SHA1 05b47af2d00321f3df5038fdf2d40dd8caeaa3bb SHA256 476e24de8755cd9a0116ec86fd6c1341655c6a015f2cea62bd26c2e369a59e5b
 MISC metadata.xml 2435 RMD160 613462e121bbd2276c1c8caa3dd9163847676ba1 SHA1 8637c5b8690f200384da5c0fb4f5adcac1e3048f SHA256 b64dc726afd5fc2842ffc68cb2699c6dcff6ed8e7aec757b1b16565bea255b29
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk4cn2MACgkQvFcC4BYPU0pH6ACfQ8rLgmDfnVWbWU3J/G9N7kcw
-Ei4AnjM34ovypfKrd6SPjZTESo9Kd0oA
-=g4ng
+iEYEARECAAYFAk4xZlMACgkQvFcC4BYPU0pxIACgiwlBwff2z4phyohXrSwgu8pu
+dyIAn3okE2BGyRf5rP5039AktWrQPyHH
+=5mRa
 -----END PGP SIGNATURE-----
