@@ -1,6 +1,11 @@
 # ChangeLog for app-text/texlive
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/texlive/ChangeLog,v 1.76 2011/07/12 19:24:14 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/texlive/ChangeLog,v 1.77 2011/07/28 13:38:21 aballier Exp $
+
+*texlive-2011 (28 Jul 2011)
+
+  28 Jul 2011; Alexis Ballier <aballier@gentoo.org> +texlive-2011.ebuild:
+  Bump to TeX Live 2011
 
   12 Jul 2011; Alexis Ballier <aballier@gentoo.org> texlive-2010-r2.ebuild:
   bump luatex dep to make sure people use the latest version as it fixes
